# try_generate_export_helper

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
mylib/: CMakeLists.txt  mylib.cpp  mylib.h
